fixed 'teamates' section alignment

--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ header {
     width: 60%;
     margin: 0 auto;
     display: flex;
+    justify-content: center;
 }
 
 #teammates .container .card {
